@@ -114,6 +114,8 @@ Changes since 2.0.6
     separate process via the socket-based debugger interface.
 44. src/slang.c: If a try-finally block contained a return statement,
     the function would sometimes continue after the finally block.
+45. modules/termios-module.c: Added tcget/seti/ospeed functions for
+    setting baudrates of termios structures.
 
 Changes since 2.0.5
 1. src/slmath.c: nint was returning the wrong value for numbers 0.5<=x<1.
